--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <p>&amp; Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentences about yourself. Follow the instructions in README.md to turn it in.</p>
+  <p> I'm so excited to create this page.</p>
+  <p> My hobbies are yoga and swimming.</p>
 </body>
 </html>
