--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
+  <p>Hello world. This is my first website!</p>
   <p>I'm so excited to create this page.</p>
   <p>My hobbies are yoga and swimming.</p>
 </body>
